fix <pre> wrapping

--- a/client/src/style/markdown.css
+++ b/client/src/style/markdown.css
@@ -9,6 +9,7 @@
 	padding: 1rem;
 	border-radius: 0.5rem;
 	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+	white-space: pre-wrap;
 }
 
 #markdown pre code {
